# papyrus

./: .env.sample  .gitignore  .gitmodules  README.md  main.py  pyproject.toml
cogs/: __init__.py
cogs/chatbot/: __init__.py  chatbot_cog.py  responses_api.py
log/: .gitignore  logging_conf.json
