[project]
name = "papyrus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "dotenv>=0.9.9",
    "openai>=2.14.0",
]

[dependency-groups]
dev = ["ruff>=0.14.13", "ty>=0.0.12"]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D400",
    "D415",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "PGH003",
]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
